--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,7 @@ address {
 	padding-left: 15px;
 	padding-right: 15px;
 	margin: 0 auto;
+	outline: 1px solid red;
 }
 
 .section {
@@ -308,7 +309,6 @@ img {
 
 .we-doing-text {
 	position: absolute;
-	bottop: 0;
 	transform: translateY(-100%);
 
 	margin: 0 auto;
@@ -589,6 +589,66 @@ img {
 
 .join-ico {
 	fill: var(--additional-text-color);
+}
+
+.subscribe {
+	margin-bottom: 20px;
+	margin-left: 93px;
+	width: 100%;
+}
+
+.subscribe-header {
+	font-size: 14px;
+	line-height: calc(16 / 14);
+	letter-spacing: 0.03em;
+	text-transform: uppercase;
+	color: var(--additional-text-color);
+}
+
+.subscribe-form {
+	position: relative;
+	margin-top: 20px;
+	display: flex;
+	flex-wrap: no-wrap;
+}
+
+.subscribe-input {
+	padding-left: 16px;
+
+	background-color: transparent;
+	width: 100%;
+	border: 1px solid rgba(255, 255, 255, 0.3);
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+	border-radius: 4px;
+	letter-spacing: 0.03em;
+
+	color: rgba(255, 255, 255, 0.6);
+}
+
+.subscribe-btn {
+	width: 200px;
+	height: 50px;
+	padding: 10px 62px 10px 29px;
+	margin-left: 12px;
+	background-color: var(--accent-color);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border-radius: 4px;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 1.88;
+	letter-spacing: 0.06em;
+	color: var(--additional-text-color);
+
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-send-ico {
+	position: absolute;
+	width: 24px;
+	height: 24px;
+	right: 28px;
+	top: 50%;
+	transform: translateY(-50%);
 }
 
 /*-----------PORTFOLIO--------------*/
