--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ address {
 	padding-left: 15px;
 	padding-right: 15px;
 	margin: 0 auto;
-	outline: 1px solid red;
+	/* outline: 1px solid red; */
 }
 
 .section {
@@ -623,6 +623,8 @@ img {
 	letter-spacing: 0.03em;
 
 	color: rgba(255, 255, 255, 0.6);
+
+	outline: transparent;
 }
 
 .subscribe-btn {
@@ -784,6 +786,7 @@ img {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%) scale(1);
+	padding: 40px;
 
 	width: 528px;
 	min-height: 581px;
@@ -816,4 +819,185 @@ img {
 	visibility: hidden;
 	opacity: 0;
 	pointer-events: none;
+}
+
+.modal-header {
+	margin-bottom: 12px;
+
+	font-size: 20px;
+	line-height: calc(24 / 20);
+	text-align: center;
+	letter-spacing: 0.03em;
+}
+
+.modal-group textarea {
+	width: 100%;
+	height: 120px;
+
+	border: 1px solid rgba(33, 33, 33, 0.2);
+	border-radius: 4px;
+
+	resize: none;
+
+	padding: 12px 16px;
+	margin-top: 4px;
+
+	outline: transparent;
+
+	transition-property: border-color;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-group textarea::placeholder {
+	font-size: 12px;
+	line-height: calc(14 / 12);
+	letter-spacing: 0.01em;
+
+	color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-group textarea:hover,
+.modal-group textarea:focus {
+	border-color: var(--accent-color);
+	cursor: pointer;
+}
+
+.modal-label {
+	display: block;
+	margin-top: 10px;
+
+	font-size: 12px;
+	line-height: calc(14 / 12);
+	letter-spacing: 0.01em;
+	color: var(--secondary-text-color);
+}
+
+.modal-list {
+	position: relative;
+	margin-top: 4px;
+}
+
+.modal-input {
+	width: 100%;
+	height: 40px;
+
+	border: 1px solid rgba(33, 33, 33, 0.2);
+	border-radius: 4px;
+
+	padding: 12px 16px 12px 42px;
+	outline: transparent;
+
+	transition-property: border-color;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus,
+.modal-input:hover {
+	border-color: var(--accent-color);
+	cursor: pointer;
+}
+
+.modal-ico {
+	position: absolute;
+	left: 12px;
+	top: 50%;
+	transform: translateY(-50%);
+	fill: var(--primary-text-color);
+
+	transition-property: fill;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus + .modal-ico,
+.modal-input:hover + .modal-ico {
+	fill: var(--accent-color);
+	cursor: inherit;
+}
+
+.modal-checkbox {
+	margin-top: 20px;
+}
+
+.label-check {
+	display: flex;
+	align-items: center;
+	color: var(--secondary-text-color);
+
+	font-weight: 400;
+	font-size: 14px;
+	line-height: calc(24 / 14);
+	letter-spacing: 0.03em;
+}
+
+.input-check:checked + .label-check span {
+	background-color: var(--accent-color);
+	border-radius: 2px;
+	background-image: none;
+}
+
+.input-check:checked + .label-check .check-ico {
+	fill: var(--additional-text-color);
+	border: none;
+}
+
+.label-check span {
+	width: 16px;
+	height: 15px;
+	/* border: 2px solid black;
+	border-radius: 2px; */
+	background-image: url(../images/checkbox-off.svg);
+	background-repeat: no-repeat;
+	background-size: contain;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-right: 7px;
+}
+
+.label-check {
+	fill: transparent;
+}
+
+.modal-btn {
+	transition-property: background-color, color, box-shadow;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+
+	padding: 10px 55px;
+	margin-top: 30px;
+
+	background-color: var(--accent-color);
+	font-family: inherit;
+	color: var(--additional-text-color);
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.62;
+	text-align: center;
+	letter-spacing: 0.03em;
+
+	border-radius: 4px;
+	border-color: transparent;
+	cursor: pointer;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.modal-form {
+	position: relative;
+}
+
+.modal-btn:focus,
+.modal-btn:hover,
+.modal-btn:active {
+	background-color: #188ce8;
+	color: var(--additional-text-color);
+}
+
+.check-ico {
 }
