--- a/css/styles.css
+++ b/css/styles.css
@@ -548,7 +548,8 @@ img {
 
 .join-header {
 	font-size: 14px;
-	line-height: 1.14x;
+	line-height: 1.14;
+	font-weight: 700;
 	letter-spacing: 0.03em;
 	text-transform: uppercase;
 	color: var(--additional-text-color);
@@ -592,13 +593,12 @@ img {
 }
 
 .subscribe {
-	margin-bottom: 20px;
 	margin-left: 93px;
-	width: 100%;
 }
 
 .subscribe-header {
 	font-size: 14px;
+	font-weight: 700;
 	line-height: calc(16 / 14);
 	letter-spacing: 0.03em;
 	text-transform: uppercase;
@@ -614,9 +614,9 @@ img {
 
 .subscribe-input {
 	padding-left: 16px;
-
+	width: 368px;
 	background-color: transparent;
-	width: 100%;
+
 	border: 1px solid rgba(255, 255, 255, 0.3);
 	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 	border-radius: 4px;
@@ -802,7 +802,7 @@ img {
 	position: absolute;
 	top: 8px;
 	right: 8px;
-
+	padding: 0;
 	width: 30px;
 	height: 30px;
 	border-radius: 50%;
@@ -815,6 +815,16 @@ img {
 	justify-content: center;
 }
 
+.modal-close-ico {
+	transition-property: fill;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-ico:hover {
+	fill: var(--accent-color);
+}
+
 .is-hidden {
 	visibility: hidden;
 	opacity: 0;
@@ -823,7 +833,7 @@ img {
 
 .modal-header {
 	margin-bottom: 12px;
-
+	font-weight: 700;
 	font-size: 20px;
 	line-height: calc(24 / 20);
 	text-align: center;
@@ -831,6 +841,8 @@ img {
 }
 
 .modal-group textarea {
+	display: block;
+
 	width: 100%;
 	height: 120px;
 
@@ -865,7 +877,7 @@ img {
 
 .modal-label {
 	display: block;
-	margin-top: 10px;
+	margin-bottom: 4px;
 
 	font-size: 12px;
 	line-height: calc(14 / 12);
@@ -875,7 +887,7 @@ img {
 
 .modal-list {
 	position: relative;
-	margin-top: 4px;
+	margin-bottom: 10px;
 }
 
 .modal-input {
@@ -924,6 +936,7 @@ img {
 .label-check {
 	display: flex;
 	align-items: center;
+	justify-content: center;
 	color: var(--secondary-text-color);
 
 	font-weight: 400;
@@ -934,31 +947,32 @@ img {
 
 .input-check:checked + .label-check span {
 	background-color: var(--accent-color);
-	border-radius: 2px;
-	background-image: none;
+	outline-color: var(--accent-color);
 }
 
 .input-check:checked + .label-check .check-ico {
-	fill: var(--additional-text-color);
 	border: none;
+	fill: var(--additional-text-color);
 }
 
 .label-check span {
 	width: 16px;
 	height: 15px;
-	/* border: 2px solid black;
-	border-radius: 2px; */
-	background-image: url(../images/checkbox-off.svg);
-	background-repeat: no-repeat;
-	background-size: contain;
+	outline: 2px solid black;
+	border-radius: 2px;
+
 	display: flex;
-	align-items: center;
 	justify-content: center;
+	align-items: center;
 	margin-right: 7px;
+
+	transition-property: background-color, outline-color;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.label-check {
-	fill: transparent;
+.label-check a {
+	color: var(--accent-color);
 }
 
 .modal-btn {
@@ -1000,4 +1014,5 @@ img {
 }
 
 .check-ico {
+	fill: transparent;
 }
